# wasm-game-of-life

./: .gitignore  .yarnrc.yml  Cargo.toml  README.md  eslint.config.mjs  notes  package.json
.github/: cleanup-caches.yml  code-validation.yml  dependabot.yml
.github/workflows/: code-validation.yml  dependabot-auto-merge.yml  packages-validation.yml
.husky/: pre-commit  pre-push
benches/: after.txt  before.txt  bench.rs
configs/bash/: helpers
configs/scripts/: build-wasm.sh
configs/webpack/: webpack.dev.js
public/: assets-manifest.json
src/: lib.rs  utils.rs
tests/: test_web.rs  web_test.rs
web/: main.css
web/components/app/: constants.ts  helpers.ts  index.tsx  styles.ts
web/hooks/: useInitWasm.ts
