[package]
authors = ["Arthur Hovhannisyan <arthurhovhannisyan31@gmail.com>"]
edition = "2024"
name = "wasm-game-of-life"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3.77"
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[profile.release]
opt-level = "s"
