[package]
description = "Conway's Game of Life implementation in Rust and WebAssembly"
authors = ["Arthur Hovhannisyan <arthurhovhannisyan31@gmail.com>"]
repository = "https://github.com/arthurhovhannisyan31/wasm-game-of-life"
edition = "2024"
name = "wasm-game-of-life"
version = "0.1.0"
license = "MIT"

[lib]
crate-type = [
  "cdylib",
  "rlib"
]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3.77"
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3", features = ["console"] }
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[profile.release]
lto = true
opt-level = "s"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-g', '-O']
